[gd_scene load_steps=28 format=3 uid="uid://ckf1shoupml04"]

[ext_resource type="Script" uid="uid://bbkaga6afrhk4" path="res://game/scenes/game.gd" id="1_vv3et"]
[ext_resource type="PackedScene" uid="uid://bv7mv73nltqo0" path="res://game/entities/player/player.tscn" id="2_wowgv"]
[ext_resource type="Texture2D" uid="uid://bp1oxwhpb401l" path="res://assets/textures/mothball_stage.png" id="2_ykdcs"]
[ext_resource type="Texture2D" uid="uid://yqui577eudqp" path="res://assets/textures/mothball_ui_hud.png" id="3_gy5jl"]
[ext_resource type="PackedScene" uid="uid://bkrm6wtepammu" path="res://game/entities/bullets/bullet.tscn" id="3_ykdcs"]
[ext_resource type="Texture2D" uid="uid://kvwmwtqpkymn" path="res://assets/textures/mothball_ui_hud_blue5.png" id="4_4osd1"]
[ext_resource type="FontFile" uid="uid://dpno5j5764jhf" path="res://assets/fonts/silkscreen/Silkscreen-Regular.ttf" id="4_l4dfk"]
[ext_resource type="Texture2D" uid="uid://gqcagbmvisx6" path="res://assets/textures/mothball_ui_hud_red5.png" id="5_ru4j2"]
[ext_resource type="AudioStream" uid="uid://b0roaf3gmlwqh" path="res://assets/audio/ovani/sounds/Count Down.wav" id="7_4osd1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gy5jl"]
atlas = ExtResource("2_ykdcs")
region = Rect2(0, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4dfk"]
atlas = ExtResource("2_ykdcs")
region = Rect2(320, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_og0sj"]
atlas = ExtResource("2_ykdcs")
region = Rect2(640, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_4osd1"]
atlas = ExtResource("2_ykdcs")
region = Rect2(960, 0, 320, 180)

[sub_resource type="SpriteFrames" id="SpriteFrames_bbyh4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy5jl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4dfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_og0sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4osd1")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_4osd1"]
font = ExtResource("4_l4dfk")

[sub_resource type="LabelSettings" id="LabelSettings_ru4j2"]
font = ExtResource("4_l4dfk")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_og0sj"]
font = ExtResource("4_l4dfk")
font_size = 24
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_og0sj"]
resource_name = "start"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ready:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 1.96667, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, false, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Set:visible")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, false, true, false, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Go:visible")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, false, false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CountDown:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_4osd1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ready:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Set:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Go:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Winner:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CountDown:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ru4j2"]
resource_name = "result"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Winner:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ru4j2"]
_data = {
&"RESET": SubResource("Animation_4osd1"),
&"result": SubResource("Animation_ru4j2"),
&"start": SubResource("Animation_og0sj")
}

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_d43yr"]
normal = Vector2(0, 1)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_jy3tp"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_870h7"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_in110"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_d8u2r"]
normal = Vector2(1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_j5bdd"]
normal = Vector2(-1, 0)

[node name="Game" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_vv3et")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 90)
process_callback = 0

[node name="GameTimer" type="Timer" parent="."]
one_shot = true

[node name="Visuals" type="Node2D" parent="."]

[node name="StageAnimatedSprite2D" type="AnimatedSprite2D" parent="Visuals"]
sprite_frames = SubResource("SpriteFrames_bbyh4")
autoplay = "default"
frame_progress = 0.544416
centered = false

[node name="UISprite2D" type="Sprite2D" parent="Visuals"]
z_index = 1
position = Vector2(160, 162)
texture = ExtResource("3_gy5jl")

[node name="P1AmmoSprite2D" type="Sprite2D" parent="Visuals/UISprite2D"]
texture = ExtResource("4_4osd1")

[node name="P2AmmoSprite2D" type="Sprite2D" parent="Visuals/UISprite2D"]
texture = ExtResource("5_ru4j2")

[node name="TimerLabel" type="Label" parent="Visuals/UISprite2D"]
offset_left = -18.0
offset_top = -14.0
offset_right = 18.0
offset_bottom = 14.0
text = "00"
label_settings = SubResource("LabelSettings_4osd1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel1" type="Label" parent="Visuals/UISprite2D"]
offset_left = -52.0
offset_top = -18.0
offset_right = -13.0
offset_bottom = 15.0
text = "0"
label_settings = SubResource("LabelSettings_ru4j2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel2" type="Label" parent="Visuals/UISprite2D"]
offset_left = 13.0
offset_top = -18.0
offset_right = 52.0
offset_bottom = 15.0
text = "0"
label_settings = SubResource("LabelSettings_ru4j2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Messages" type="Node2D" parent="Visuals"]
z_index = 1

[node name="Ready" type="Node2D" parent="Visuals/Messages"]
visible = false
position = Vector2(160, 36)

[node name="Label" type="Label" parent="Visuals/Messages/Ready"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -15.5
offset_right = 45.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "READY"
label_settings = SubResource("LabelSettings_og0sj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Set" type="Node2D" parent="Visuals/Messages"]
visible = false
position = Vector2(160, 69)

[node name="Label" type="Label" parent="Visuals/Messages/Set"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -15.5
offset_right = 24.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "SET"
label_settings = SubResource("LabelSettings_og0sj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Go" type="Node2D" parent="Visuals/Messages"]
visible = false
position = Vector2(160, 103)

[node name="Label" type="Label" parent="Visuals/Messages/Go"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -15.5
offset_right = 18.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "GO"
label_settings = SubResource("LabelSettings_og0sj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Winner" type="Node2D" parent="Visuals/Messages"]
visible = false
position = Vector2(160, 69)

[node name="Label" type="Label" parent="Visuals/Messages/Winner"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -15.5
offset_right = 24.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "P1
WINS"
label_settings = SubResource("LabelSettings_og0sj")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visuals/Messages"]
libraries = {
&"": SubResource("AnimationLibrary_ru4j2")
}
autoplay = "RESET"

[node name="CountDown" type="AudioStreamPlayer" parent="Visuals/Messages"]
stream = ExtResource("7_4osd1")
bus = &"Sounds"

[node name="Boundaries" type="Node2D" parent="."]

[node name="StageStaticBody2D" type="StaticBody2D" parent="Boundaries"]
position = Vector2(160, 15)
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/StageStaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_d43yr")

[node name="StageStaticBody2D2" type="StaticBody2D" parent="Boundaries"]
position = Vector2(160, 129)
collision_layer = 2
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/StageStaticBody2D2"]
shape = SubResource("WorldBoundaryShape2D_jy3tp")

[node name="Player1StaticBody2D" type="StaticBody2D" parent="Boundaries"]
position = Vector2(31, 72)
collision_layer = 16
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Player1StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_870h7")

[node name="Player1StaticBody2D2" type="StaticBody2D" parent="Boundaries"]
position = Vector2(130, 72)
collision_layer = 16
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Player1StaticBody2D2"]
shape = SubResource("WorldBoundaryShape2D_in110")

[node name="Player2StaticBody2D" type="StaticBody2D" parent="Boundaries"]
position = Vector2(190, 72)
collision_layer = 32
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Player2StaticBody2D"]
shape = SubResource("WorldBoundaryShape2D_d8u2r")

[node name="Player2StaticBody2D2" type="StaticBody2D" parent="Boundaries"]
position = Vector2(289, 72)
collision_layer = 32
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boundaries/Player2StaticBody2D2"]
shape = SubResource("WorldBoundaryShape2D_j5bdd")

[node name="Entities" type="Node2D" parent="."]

[node name="Player1" parent="Entities" node_paths=PackedStringArray("bullets") instance=ExtResource("2_wowgv")]
position = Vector2(80, 72)
bullets = [NodePath("../ColorRect/Bullet1"), NodePath("../ColorRect/Bullet2"), NodePath("../ColorRect/Bullet3"), NodePath("../ColorRect/Bullet4"), NodePath("../ColorRect/Bullet5")]

[node name="Player2" parent="Entities" node_paths=PackedStringArray("bullets") instance=ExtResource("2_wowgv")]
position = Vector2(240, 72)
bullets = [NodePath("../ColorRect/Bullet6"), NodePath("../ColorRect/Bullet7"), NodePath("../ColorRect/Bullet8"), NodePath("../ColorRect/Bullet9"), NodePath("../ColorRect/Bullet10")]
player = "P2"

[node name="ColorRect" type="ColorRect" parent="Entities"]
clip_children = 1
offset_left = 12.0
offset_top = 16.0
offset_right = 308.0
offset_bottom = 128.0

[node name="Bullet1" parent="Entities/ColorRect" instance=ExtResource("3_ykdcs")]
position = Vector2(10, 200)

[node name="Bullet2" parent="Entities/ColorRect" instance=ExtResource("3_ykdcs")]
position = Vector2(10, 200)

[node name="Bullet3" parent="Entities/ColorRect" instance=ExtResource("3_ykdcs")]
position = Vector2(10, 200)

[node name="Bullet4" parent="Entities/ColorRect" instance=ExtResource("3_ykdcs")]
position = Vector2(10, 200)

[node name="Bullet5" parent="Entities/ColorRect" instance=ExtResource("3_ykdcs")]
position = Vector2(10, 200)

[node name="Bullet6" parent="Entities/ColorRect" instance=ExtResource("3_ykdcs")]
position = Vector2(30, 200)

[node name="Bullet7" parent="Entities/ColorRect" instance=ExtResource("3_ykdcs")]
position = Vector2(30, 200)

[node name="Bullet8" parent="Entities/ColorRect" instance=ExtResource("3_ykdcs")]
position = Vector2(30, 200)

[node name="Bullet9" parent="Entities/ColorRect" instance=ExtResource("3_ykdcs")]
position = Vector2(30, 200)

[node name="Bullet10" parent="Entities/ColorRect" instance=ExtResource("3_ykdcs")]
position = Vector2(30, 200)
